@@ -274,11 +274,11 @@
 	.checkbox {
 		margin-top: 0px;
 		margin-bottom: 7px;
-	}
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		margin: 11px 10px 0 -20px;
+		input[type="checkbox"],
+		input[type="radio"] {
+			top: 8px;
+		}
 	}
 }
 
