@@ -5,6 +5,7 @@
 * Fix - Removed remove_filter: the_excerpt/wpautop
 * Fix - Small Sass files change (wiyhout affect CSS)
 * Fix - Fixed duplicated breadcrumb for custom taxonomy archives
+* Fix - Fixed CSS for radio and checkboxes (forms)
 
 ### 1.8.5
 * Fix - Footer widgets changed breakpoint
